[gd_scene load_steps=8 format=3 uid="uid://b2vl3h87hm2uv"]

[ext_resource type="Theme" uid="uid://drays61pfu7xc" path="res://lessons/main_theme.tres" id="1_fhjn8"]
[ext_resource type="Script" uid="uid://057m1a3ct0n5" path="res://lessons/expressions.gd" id="2_ymvnu"]
[ext_resource type="Shader" uid="uid://cs15e2hgd2lan" path="res://assets/sliding_background.gdshader" id="3_2ah1v"]
[ext_resource type="Texture2D" uid="uid://bnly1gkbxw6b5" path="res://assets/bubble_pattern.png" id="4_ftxmv"]
[ext_resource type="Texture2D" uid="uid://copkt78vgp37i" path="res://assets/sophia.png" id="5_i4xdc"]
[ext_resource type="Texture2D" uid="uid://d000xjtr4iqtk" path="res://assets/emotion_regular.png" id="6_g43r7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iq77p"]
shader = ExtResource("3_2ah1v")
shader_parameter/pattern_sampler = ExtResource("4_ftxmv")
shader_parameter/bg_color = Color(0.79607844, 0.9882353, 0.75686276, 1)
shader_parameter/pattern_color = Color(0.5019608, 0.8509804, 0.53333336, 1)
shader_parameter/pattern_size = 256.0

[node name="Expressions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fhjn8")
script = ExtResource("2_ymvnu")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iq77p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.077083334
anchor_top = 0.0018518518
anchor_right = 1.0770833
anchor_bottom = 1.0018518
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_i4xdc")
expand_mode = 1
stretch_mode = 5

[node name="Expression" type="TextureRect" parent="Body"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 83.0
offset_right = -27.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_g43r7")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 671.0
offset_bottom = 255.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSophia" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sopia"

[node name="ButtonPink" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pink"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonRugular" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Regular"

[node name="ButtonSad" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Sad"

[node name="ButtonHappy" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Happy"
