extends Control

@onready var body: TextureRect = %Body
@onready var expression: TextureRect = %Expression
@onready var button_sophia: Button = %ButtonSophia
@onready var button_pink: Button = %ButtonPink
@onready var button_rugular: Button = %ButtonRugular
@onready var button_sad: Button = %ButtonSad
@onready var button_happy: Button = %ButtonHappy
